--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
   "homepage": "https://github.com/chrunlee/webdemo#readme",
   "dependencies": {
     "art-template": "^4.12.2",
+    "async": "^2.6.1",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "express-art-template": "^1.0.0",
     "less-middleware": "^2.2.1",
+    "moment": "^2.22.1",
     "morgan": "^1.9.0",
+    "mysql": "^2.15.0",
     "serve-favicon": "^2.4.5"
   }
 }
