--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "moment": "^2.22.1",
     "morgan": "^1.9.0",
     "mysql": "^2.15.0",
-    "serve-favicon": "^2.4.5"
+    "serve-favicon": "^2.4.5",
+    "xml2js": "^0.4.19"
   }
 }
