--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "art-template": "^4.12.2",
     "async": "^2.6.1",
     "body-parser": "^1.18.2",
+    "cookie-parser": "^1.4.3",
     "express": "^4.16.2",
     "express-art-template": "^1.0.0",
     "less-middleware": "^2.2.1",
