--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "morgan": "^1.9.0",
     "mysql": "^2.15.0",
     "serve-favicon": "^2.4.5",
+    "simple-mysql-query": "^1.0.0",
     "xml2js": "^0.4.19"
   }
 }
