--- a/package.json
+++ b/package.json
@@ -20,10 +20,16 @@
     "art-template": "^4.12.2",
     "async": "^2.6.1",
     "body-parser": "^1.18.2",
+    "compression": "^1.7.3",
     "cookie-parser": "^1.4.3",
+    "core-js": "^2.5.7",
     "express": "^4.16.2",
     "express-art-template": "^1.0.0",
-    "less-middleware": "^2.2.1",
+    "express-session": "^1.15.6",
+    "jimp": "^0.3.3",
+    "less-middleware": "^3.0.1",
+    "marked": "^0.4.0",
+    "mkdirsp": "^1.0.1",
     "moment": "^2.22.1",
     "morgan": "^1.9.0",
     "mysql": "^2.15.0",
