--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "art-template": "^4.12.2",
     "async": "^2.6.1",
+    "axios": "^0.19.0",
     "body-parser": "^1.18.2",
     "cheerio": "^1.0.0-rc.2",
     "compression": "^1.7.3",
