--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/chrunlee/webdemo#readme",
   "dependencies": {
+    "archiver": "^3.0.0",
     "art-template": "^4.12.2",
     "async": "^2.6.1",
     "axios": "^0.19.0",
