--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "qiniu": "^7.2.1",
     "serve-favicon": "^2.4.5",
     "simple-mysql-query": "^1.1.3",
+    "sitemap": "^3.2.2",
     "sqlquery-tool": "^1.1.4",
     "superagent": "^5.1.0",
     "xml2js": "^0.4.19"
