--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "body-parser": "^1.18.2",
     "cheerio": "^1.0.0-rc.2",
     "compression": "^1.7.3",
+    "connect-redis": "^3.4.2",
     "cookie-parser": "^1.4.3",
     "core-js": "^2.5.7",
     "express": "^4.16.2",
