--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "core-js": "^2.5.7",
     "express": "^4.16.2",
     "express-art-template": "^1.0.0",
-    "express-session": "^1.15.6",
+    "express-session": "^1.16.2",
     "jimp": "^0.3.3",
     "less-middleware": "^3.0.1",
     "marked": "^0.7.0",
@@ -39,6 +39,7 @@
     "mysql": "^2.17.1",
     "nodemailer": "^4.7.0",
     "qiniu": "^7.2.1",
+    "redis": "^2.8.0",
     "serve-favicon": "^2.4.5",
     "simple-mysql-query": "^1.1.3",
     "sitemap": "^3.2.2",
