--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.1.0",
   "description": "主要包含了平时学习、模仿产生的一些页面、插件。",
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "supervisor -i public,views ./bin/www",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -37,8 +37,10 @@
     "moment": "^2.22.1",
     "morgan": "^1.9.1",
     "mysql": "^2.17.1",
+    "node-uuid": "^1.4.8",
     "nodemailer": "^4.7.0",
     "qiniu": "^7.2.1",
+    "qr-image": "^3.2.0",
     "redis": "^2.8.0",
     "serve-favicon": "^2.4.5",
     "simple-mysql-query": "^1.1.3",
